<resources>
    <string name="app_name">LightChat</string>
    <string name="email">Email</string>
    <string name="text_name">Họ và tên</string>
    <string name="password">Mật khẩu</string>
    <string name="text_register"><u>Register</u></string>
    <string name="text_login"><u>Login</u></string>
    <string name="text_welcome">Chào mừng bạn đến LighChat!</string>
    <string name="hint_welcome2">Vui lòng đăng nhập và đăng ký để tiếp tục</string>
    <string name="hint_welcome_signup">Vui lòng đăng ký để tiếp tục</string>
    <string name="text_signup_email">Đăng ký với email</string>
    <string name="text_login_welcome">Đăng nhập ngay</string>
    <string name="text_login_email">Đăng nhập với email</string>
    <string name="hint_login_remember">Nhớ đăng nhập</string>
    <string name="hint_signup_policy">Tôi đồng ý với điều khoản</string>
    <string name="text_login_forgot_password">Quên mật khẩu?</string>
    <string name="text_login_3">Đăng nhập</string>
    <string name="hint_login_different">Đăng nhập bằng cách khác</string>
    <string name="hint_signup_different">Đăng ký bằng cách khác</string>
    <string name="text_signup">Đăng ký</string>
    <string name="text_signup_now">Đăng ký ngay</string>
    <string name="text_login_now">Đăng nhập ngay</string>
    <string name="hint_no_account">Bạn không có tài khoản?</string>
    <string name="hint_have_account">Bạn đã có tài khoản?</string>
    <string name="text_mess">Đoạn chat</string>
    <string name="text_profile">Hồ sơ</string>
    <string name="text_friends">Mọi người</string>
    <string name="text_search">Tìm kiếm ...</string>
    <string name="text_search_friends">Tìm kiếm bạn bè</string>
    <string name="text_infoUser">Hồ sơ của bạn</string>
    <string name="text_numberPhone">Số điện thoại</string>
    <string name="text_update">Cập nhật</string>
    <string name="text_input_chat">Nhập đoạn chat của bạn nè....</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Facebok login id-->
    <string name="facebook_app_id">1144426033092987</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">5d89dec9acd2106c2c62095ef6492ab1</string>
</resources>